--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Yang Husurianto <yang.husurianto@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@keyv/mongo": "^2.2.8",
     "chalk": "^4.1.2",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "discord.js": "14.14.1",
+    "dotenv": "^10.0.0"
   }
 }
