--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "console-stamp": "^3.1.2",
     "discord.js": "14.14.1",
     "dotenv": "^10.0.0",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "ms": "^2.1.3",
+    "pretty-ms": "^9.0.0"
   }
 }
