--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mongoose": "^8.0.4",
     "ms": "^2.1.3",
     "pretty-ms": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
